--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,17 +51,13 @@ android {
 
 dependencies {
 
-    implementation 'com.google.android.material:material:1.7.0-alpha02'
+    // ui and lifecycle
+    implementation "com.google.android.material:material:$material_version"
     implementation "androidx.core:core-ktx:$supportLibrary_version"
     implementation "androidx.appcompat:appcompat:$supportLibrary_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 
     // local DB
-    def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -69,25 +65,26 @@ dependencies {
 
 
     //network
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okttp_interceptor_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // DI
     implementation "io.insert-koin:koin-android:$koin_version"
 
     // Test
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation "io.mockk:mockk:1.12.4"
-    testImplementation 'app.cash.turbine:turbine:0.8.0'
-
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "app.cash.turbine:turbine:$turbine_version"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     // viewbinding version START, only there for the version with viewbinding
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
-    kapt 'com.github.bumptech.glide:compiler:4.13.0'
-    implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "com.airbnb.android:lottie:$lottie_version"
 
     // viewbinding version END
 
@@ -95,21 +92,15 @@ dependencies {
 
     // Compose version START
 
+    // ui
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation "io.coil-kt:coil-compose:$coil_compose_version"
+    implementation "com.airbnb.android:lottie-compose:$lottie_compose_version"
 
-    implementation "io.coil-kt:coil-compose:2.1.0"
-     implementation "com.airbnb.android:lottie-compose:5.2.0"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha02"
-    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
-
-
-    // test
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.activity:activity-compose:$activity_compose_version"
     // Compose version END
 
 }
