--- a/versions.gradle
+++ b/versions.gradle
@@ -1,6 +1,30 @@
 ext {
+
+    // android
     koin_version = "3.2.0"
-    compose_version = '1.2.0-alpha08'
+    activity_compose_version = "1.4.0"
     coroutines_version = '1.6.0'
     supportLibrary_version = '1.4.2'
+    material_version = "1.7.0-alpha02"
+
+    lifecycle_runtime_ktx = "2.4.1"
+    room_version = "2.4.2"
+
+    // Network
+    retrofit_version = "2.9.0"
+    okhttp_version = "4.9.0"
+    okttp_interceptor_version = "4.7.2"
+
+    // UI
+    compose_version = '1.2.0-alpha08'
+    glide_version = "4.13.0"
+    lottie_version = "5.2.0"
+    coil_compose_version = "2.1.0"
+    lottie_compose_version = "5.2.0"
+
+    // Testing
+    junit_version = "4.13.2"
+    mockk_version = "1.12.4"
+    turbine_version = "0.8.0"
+    junit_ktx_version = "1.1.3"
 }
